added more content

--- a/index.html
+++ b/index.html
@@ -28,14 +28,31 @@ life is too short to be taken seriously</h1>
                 </div>
             </div>
             <div class="middlePart">
+                <h1 class="contactInfo">
+                    Email: Abdulqader.shatali@gmail.com <br>
+                    Mobile Number: 00972599741989 <br>
+                    linkedIn: www.linkedin.com/in/abdulqader-j-shatali 
+
+                </h1>
                 <h1 class="aboutMe">
                      Electrical Engineer <br>
                      Music enthusiast <br>
+                     Bass Player <br>
                      Not much else
                 </h1>
 
             </div>
+            <div class= "lowerPart">
+                <div class="iHaveNoIdeaWhatImDoing">
+                    <h1>
+                        This is all I have sorry
+                    </h1>
+                   <div>
+                       
+                   </div> <img src="img/ohWell.jpg" alt="At least you tried">
+                </div>
 
+            </div>
         </div>
     </div>
     
