picture added, all additions have been added

--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@ life is too short to be taken seriously</h1>
                     <h1>
                         This is all I have sorry
                     </h1>
-                   <div>
-                       
-                   </div> <img src="img/ohWell.jpg" alt="At least you tried">
+                
+                <div class="sad">
+                <img src="img/ohWell.jpg" alt="At least you tried">
+                </div> 
                 </div>
 
             </div>
